<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".HorarioActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarHorario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Horario Personal"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/horarioNotFoundTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHorario"
        android:padding="40dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:text="@string/no_tienes_horario"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horarioNotFoundTV"
        android:layout_marginTop="100dp"
        android:theme="@style/Theme.FiveCalendar.Button"
        android:text="@string/crear_horario"
        android:onClick="crearHorario"/>

</android.support.constraint.ConstraintLayout>

