...
    android:layout_height="match_parent"
    android:background="@drawable/fondologotipo"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="abrirHorario"
        android:text="@string/horario"
        android:textAllCaps="true"
        android:theme="@style/Theme.FiveCalendar.Button"
...
